--- a/shop.html
+++ b/shop.html
@@ -410,7 +410,7 @@ body {
     <div class="content">
         <h1 class="text-4xl font-bold mb-4">Nạp Quân Huy Liên Quân Giá Rẻ</h1>
         <p class="text-lg">UY TÍN - GIÁ RẺ - CHẤT LƯỢNG</p>
-        <p style="color: red;">Trang chủ nạp quân huy uy tín hàng đầu Việt Nam</p>
+        <p style="color: red;">Trang chủ rửa tiền bằng quân huy hàng đầu Việt Nam</p>
     </div>
 </section>
 
