--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
     <title>Dịch vụ tiền tệ Liên Quân</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_LCIHTVbgreID4-b4BruKg0LF5AraSzXlLA&s">
     <style>
         body {
     font-family: 'Roboto', sans-serif;
